修改首页图标；增加地图功能

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html style="margin:0px auto;">
+<html>
 <head>
 <title>玩转长寿湖</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -56,9 +56,9 @@
       </a>
     </li>
     <li>
-      <a href="#">
-        <div class="disable"></div>
-        建设中
+      <a href="map.html">
+        <div class="map"></div>
+        地图
       </a>
     </li>
     <li>
@@ -101,7 +101,7 @@
      <div class="text_body">
       <h3 class="new_title">长寿湖风车节，为你打造出一个如童话般的风车乐园。</h3>
       <p class="new_detail">地点: 长寿湖西岸情人谷景区</p>
-      <div>活动时间: 2016-03-15 至 2016-10-30</div>
+      <p class="new_detail">活动时间: 2016-03-15 至 2016-10-30</p>
      </div> 
      </a>
     </li>
