--- a/restraunt.html
+++ b/restraunt.html
@@ -19,82 +19,12 @@
 <ul class="info_list">
     <li>
      <a href="restrauntDetail.html">
-     <img src="imgs/thumbnail/restraunt/zhuersao.png">
-     <div class="text_body">
-      <p class="product_title"><span>朱二嫂酒楼</span><span class="icon hot_icon">热</span></p>
-      <p class="product_detail"><span>4.5分</span>|<span>300人评价</span></p>
-      <div class="product_addinfo">电话:023-40360888</div>
-     </div>
-     </a>
-    </li>
-    <li>
-     <a href="restrauntDetail.html">
-     <img src="imgs/thumbnail/restraunt/zhuersao.png">
-     <div class="text_body">
-      <p class="product_title"><span>四海酒楼</span><span class="icon hot_icon">热</span></p>
-      <p class="product_detail"><span>4.5分</span>|<span>300人评价</span></p>
-      <div class="product_addinfo">电话:023-40360888</div>
-     </div>
-     </a>
-    </li>
-    <li>
-     <a href="restrauntDetail.html">
-     <img src="imgs/thumbnail/restraunt/zhuersao.png">
-     <div class="text_body">
-      <p class="product_title"><span>三江酒楼</span><span class="icon hot_icon">热</span></p>
-      <p class="product_detail"><span>4.5分</span>|<span>300人评价</span></p>
-      <div class="product_addinfo">电话:023-40360888</div>
-     </div>
-     </a>
-    </li>
-    <li>
-     <a href="restrauntDetail.html">
-     <img src="imgs/thumbnail/restraunt/zhuersao.png">
-     <div class="text_body">
-      <p class="product_title"><span>石二哥酒楼</span><span class="icon hot_icon">热</span></p>
-      <p class="product_detail"><span>4.5分</span>|<span>300人评价</span></p>
-      <div class="product_addinfo">电话:023-40360888</div>
-     </div>
-     </a>
-    </li>
-    <li>
-     <a href="restrauntDetail.html">
-     <img src="imgs/thumbnail/restraunt/zhuersao.png">
-     <div class="text_body">
-      <p class="product_title"><span>袁二娃鱼庄</span><span class="icon hot_icon">热</span></p>
-      <p class="product_detail"><span>4.5分</span>|<span>300人评价</span></p>
-      <div class="product_addinfo">电话:023-40360888</div>
-     </div>
-     </a>
-    </li>
-    <li>
-     <a href="restrauntDetail.html">
-     <img src="imgs/thumbnail/restraunt/zhuersao.png">
-     <div class="text_body">
-      <p class="product_title"><span>思雨鱼庄</span><span class="icon hot_icon">热</span></p>
-      <p class="product_detail"><span>4.5分</span>|<span>300人评价</span></p>
-      <div class="product_addinfo">电话:023-40360888</div>
-     </div>
-     </a>
-    </li>
-    <li>
-     <a href="restrauntDetail.html">
-     <img src="imgs/thumbnail/restraunt/zhuersao.png">
-     <div class="text_body">
-      <p class="product_title"><span>石包子鱼庄</span><span class="icon hot_icon">热</span></p>
-      <p class="product_detail"><span>4.5分</span>|<span>300人评价</span></p>
-      <div class="product_addinfo">电话:023-40360888</div>
-     </div>
-     </a>
-    </li>
-    <li>
-     <a href="restrauntDetail.html">
-     <img src="imgs/thumbnail/restraunt/zhuersao.png">
-     <div class="text_body">
-      <p class="product_title"><span>好友来鱼庄</span><span class="icon hot_icon">热</span></p>
-      <p class="product_detail"><span>4.5分</span>|<span>300人评价</span></p>
-      <div class="product_addinfo">电话:023-40360888</div>
-     </div>
+       <img src="imgs/thumbnail/restraunt/zhuersao.png">
+       <div class="text_body">
+         <p class="product_title"><span>朱二嫂酒楼</span><span class="icon hot_icon">热</span></p>
+         <p class="product_detail">老字号值得信赖</span></p>
+         <div class="product_addinfo">电话:023-40360888</div>
+       </div>
      </a>
     </li>
   </ul>
