--- a/restrauntDetail.html
+++ b/restrauntDetail.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>长寿湖餐饮</title>
+<title>详情</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -12,103 +12,37 @@
 <meta name="format-detection" content="telephone=no"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 <link href="css/common.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-.detail_images{
-	width:100%;
-	height:160px;
-	margin-top: 45px;
-	position: relative;
-}
-
-.detail_images img{
-	width:100%;
-	height:100%;
-}
-
-.album{
-	position: absolute;
-    bottom: 0;
-    width: 100%;
-    line-height: 38px;
-    height: 38px;
-    background: rgba(0,0,0,.2);
-    text-align: center;
-    font-size: 12px;
-    color: #fff;
-    z-index: 1;
-}
-
-.jd_detail_info{
-	padding:10px;
-}
-
-.jd_detail_info .title{
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: 700;
-    color: #22222d;
-}
-
-.jd_detail_info .description{
-	margin-top: 12px;
-    line-height: 16px;
-    font-size: 14px;
-    color: #88888d;
-}
-
-.jd_label{
-	margin-top:10px;
-	padding:5px;
-}
-
-.jd_label_item img{
-	width:20px;
-	height:20px;
-	display:block;
-	margin:0 auto 5px;
-}
-
-.jd_label_item{
-	padding:5px 20px;
-	display:inline-block;
-	font-size:12px;
-
-}
-
-div{
-	background-color:#FFF;
-}
-</style>
+<link href="css/restrauntDetail.css" rel="stylesheet" type="text/css">
 </head>
-<body style="background-color:#EEEEEE;">
-<header><a href="index.html" class="left icon_back"><img src="imgs/icon/back.png"></a><section class="title">详情</section></header>
-<section> 
+<body>
+<header><a href="index.html" class="left icon_back"><img src="imgs/icon/back.png"></a><div class="title">详情</div></header>
+<section id="rest_main_content"> 
 <!--图集-->
-  <div class="detail_images">
+  <div class="rest_detail_images">
     <a href="#">
       <img src="imgs/banner/1.jpg">
-      <div class="album">点击图片查看相册</div>
+      <p class="rest_album">点击图片查看相册</p>
     </a>
   </div>
 <!--餐厅详情-->
-<div class="jd_detail_info">
-  <h3 class="title">朱二嫂酒楼</h3>
-  <p class="description">长寿湖老字号酒楼，环境干净整洁，味道正宗</p>
+<div class="rest_detail_info">
+  <h3 class="rest_title">朱二嫂酒楼</h3>
+  <p class="rest_description">长寿湖老字号酒楼，环境干净整洁，味道正宗</p>
 </div>
-<div class="jd_label">
-  <div class="jd_label_item">
+<div class="rest_label">
+  <div class="rest_label_item">
     <img src="imgs/icon/location.png">
     <span>定位</span>
   </div>
-  <div class="jd_label_item">
+  <div class="rest_label_item">
     <img src="imgs/icon/telephone.png">
     <span>电话</span>
   </div>
-  <div class="jd_label_item">
+  <div class="rest_label_item">
     <img src="imgs/icon/wifi.png">
     <span>WIFI</span>
   </div>
-  <div class="jd_label_item">
+  <div class="rest_label_item">
     <img src="imgs/icon/park.png">
     <span>停车</span>
   </div>
