修改餐厅详情页UI；增加了搜狐畅言

--- a/restrauntDetail.html
+++ b/restrauntDetail.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>详情</title>
+<title>朱二嫂酒楼</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -15,7 +15,7 @@
 <link href="css/restrauntDetail.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<header><a href="index.html" class="left icon_back"><img src="imgs/icon/back.png"></a><div class="title">详情</div></header>
+<header><a href="index.html" class="left icon_back"><img src="imgs/icon/back.png"></a><div class="title">朱二嫂酒楼</div></header>
 <section id="rest_main_content"> 
 <!--图集-->
   <div class="rest_detail_images">
@@ -32,7 +32,7 @@
 <div class="rest_label">
   <div class="rest_label_item">
     <img src="imgs/icon/location.png">
-    <span>定位</span>
+    <span>位置</span>
   </div>
   <div class="rest_label_item">
     <img src="imgs/icon/telephone.png">
@@ -47,5 +47,9 @@
     <span>停车</span>
   </div>
 </section>
+<!--WAP版-->
+  <div id="SOHUCS" sid="朱二嫂酒楼"></div>
+  <script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=cyswbtzSi&conf=prod_34a9f63ba3b1c3d1348a5c07c28fcec8">
+  </script>
 </body>
 </html>
