--- a/map.html
+++ b/map.html
@@ -25,8 +25,52 @@ html, body, #allmap{width: 100%; height: 100%;}
 <script type="text/javascript">
 	// 百度地图API功能
 	var map = new BMap.Map("allmap");    // 创建Map实例
-	map.centerAndZoom(new BMap.Point(107.243,29.902), 15);  // 初始化地图,设置中心点坐标和地图级别
+	map.centerAndZoom(new BMap.Point(107.243,29.902), 16);  // 初始化地图,设置中心点坐标和地图级别
 	map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
 	map.setCurrentCity("长寿湖镇");          // 设置地图显示的城市 此项是必须设置的
-	map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
+	var styleJson = [
+          {
+                    "featureType": "road",
+                    "elementType": "all",
+                    "stylers": {
+                              "lightness": 20
+                    }
+          },
+          {
+                    "featureType": "highway",
+                    "elementType": "geometry",
+                    "stylers": {
+                              "color": "#f49935"
+                    }
+          },
+          {
+                    "featureType": "railway",
+                    "elementType": "all",
+                    "stylers": {
+                              "visibility": "off"
+                    }
+          },
+          {
+                    "featureType": "local",
+                    "elementType": "labels",
+                    "stylers": {
+                              "visibility": "off"
+                    }
+          },
+          {
+                    "featureType": "water",
+                    "elementType": "all",
+                    "stylers": {
+                              "color": "#d1e5ff"
+                    }
+          },
+          {
+                    "featureType": "poi",
+                    "elementType": "labels",
+                    "stylers": {
+                              "visibility": "off"
+                    }
+          }
+]
+	map.setMapStyle({styleJson:styleJson});
 </script>
