--- a/restrauntDetail.html
+++ b/restrauntDetail.html
@@ -15,7 +15,7 @@
 <link href="css/restrauntDetail.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<header><a href="index.html" class="left icon_back"><img src="imgs/icon/back.png"></a><div class="title">朱二嫂酒楼</div></header>
+<header><a href="restraunt.html" class="left icon_back"><img src="imgs/icon/back.png"></a><div class="title">朱二嫂酒楼</div></header>
 <section id="rest_main_content"> 
 <!--图集-->
   <div class="rest_detail_images">
